新增笔记内容

--- a/public/content/page/algorithm/daliy202112.md
+++ b/public/content/page/algorithm/daliy202112.md
@@ -536,3 +536,39 @@ var maxSumOfThreeSubarrays = function(nums, k) {
 };
 ```
 
+### 12.14-课程表 III630
+
+> 原题链接：[课程表 III](https://leetcode-cn.com/problems/course-schedule-iii/)
+
+这道题目有两种解法，一种就是贪心，不过耗时比较高，这里我就不写了。这里我用了优先队列的方法，不过有一说一，js里面没有优先队列的类，还需要自己实现一遍真是麻烦，关于优先队列的介绍，我就放在另外一篇文章里面了，[优先队列的介绍]()。
+
+在本题中，我们需要将上课时间放入到优先队列中(最大二叉堆)，时间耗时越大的，放在头结点处，然后当一个新的课进入的时候，我们就处理一下，看看当前累加时间与课时相加后是否超出了限制时间，同时比较一下堆头的时间是否大于当前课时时间，如果大于，就让堆头出来，空出更多的时间。然后再以此判断当前课时加上当前累加时间是否大于当前课时的限制截止时间，如果不大于，就放入队列中去。实现代码如下:
+
+```js
+//TAG 优先队列
+/**
+ * @description 这里省略了优先队列类的书写，可以前往上面的链接进行查看
+ * @param {number[][]} courses
+ * @return {number}
+ */
+var scheduleCourse = function (courses) {
+    let t = 0;
+    courses.sort((a, b) => a[1] - b[1]);
+    const queue = new PriorityQueue();
+    for(let value of courses){
+        if(value[0] > value[1]){
+            continue;
+        }
+        if(t + value[0] > value[1] && queue.size > 0 && queue.peek() > value[0]){
+            t -= queue.poll();
+        }
+        if(t + value[0] <= value[1]){
+            t += value[0];
+            queue.offer(value[0])
+        }
+    }
+
+    return queue.size;
+};
+```
+
