GC简单内容完成

--- a/public/content/page/vue/vue3/vue3-01.md
+++ b/public/content/page/vue/vue3/vue3-01.md
@@ -6,5 +6,38 @@
 
 大概使用vue2开发了有3-4年了，从本科到了研究生，最近看到尤大说将要把vue3作为默认版本了，就想着需要开始正式学习一下vue3，来体会一下vue3与vue2之间不同之处。
 
-## 使用vue3构建vue-cli项目
+## 1. 创建vue3项目
 
+### 1.1 使用vue-cli来构建
+
+
+
+### 1.2 使用vite来创建
+
+
+
+## 2. 在Vue3项目中使用TypeScript
+
+
+
+### 2.1 组件中的声明
+
+
+
+### 2.2 组件中的装饰器的使用
+
+
+
+## 3. 响应式属性的改变
+
+
+
+### 3.1 Vue2中的实现
+
+
+
+### 3.2 Vue3中的实现
+
+
+
+## 总结
