--- a/public/content/page/vue/vue3/vue3-02.md
+++ b/public/content/page/vue/vue3/vue3-02.md
@@ -2,7 +2,7 @@
 
 | 文档创建人 | 创建日期   | 文档内容          | 更新时间   |
 | ---------- | ---------- | ----------------- | ---------- |
-| adsionli   | 2022-02-24 | vue3的学习使用-02 | 2022-02-24 |
+| adsionli   | 2022-02-25 | vue3的学习使用-02 | 2022-02-25 |
 
 这一章主要学习的是vue3中新增的`setup`组合式API，以及reactive及ref使用及细节问题的学习。
 
@@ -35,16 +35,67 @@
 3. attrs: 父级组件直接在标签中传给子级组件的内容，可以通过attrs来获取，等于this.$attrs。
 4. slots: 父级组件中使用插槽的内容。
 5. emit: 父级组件传递给子级组件的分发自定义事件函数，等于this.$emit。
-6. expose: 不知道...
+6. expose: 可以获取到父组件的prototype，也就是父级组件的原型
 
 
 
 ## 2. reactive和ref
 
-reactive和ref均是在组合式API中被用于声明响应性的API，但是reactive和ref的适用是不一样的，一个作用于对象，一个使作用于普通属性的。
+reactive和ref均是在组合式API中被用于声明响应性的API，但是reactive和ref的适用是不一样的，一个作用于对象，一个使作用于基本类型的数据。
 
-### 2.1 ref
+### 2.1 reactive和ref之间的联系
+
+1. ref也可以接收对象作为参数，但是在接收了对象参数之后，vue会自动将其转换成使用reactive来处理对象参数。
+
+   ```js
+   import { defineComponent } from 'vue'
+   import { Options, Vue, setup } from 'vue-class-component'
+   @Options({
+       components: {
+           toolbar,
+           left,
+           bottom,
+       },
+   })
+   export default class App extends Vue {
+       setup() {
+           const data:object = {
+               name: "adsionli",
+               age: 26,
+               wife: {
+                   name: "shirley"
+               }
+           }
+           const msg:string = ref("adsionli-admin");
+           const msg02:any = ref(data);
+           const msg03:any = reactive(data);  
+           console.log(msg02)
+           console.log(msg03)
+           return {
+               msg,
+               msg02,
+               msg03
+           }
+       }
+   }
+   ```
+
+   我们可以看一下输出：
+
+   ![image](../../image/vue/vue3/02/01.png)
+
+   可以看到，ref中参数为对象时，会将value处理成为Proxy对象，也就是还是使用了reactive去实现了
+
+2. ref内部的实现是通过给value属性添加getter和setter来实现对数据的劫持。
+
+   ![image](../../image/vue/vue3/02/02.png)
+
+3. reactive内部通过Proxy来实现对对象内部所有数据的劫持，并通过Reflect操作对象内部的数据
+
+4. ref在js中需要通过value来获取到，但是在模板中则不需要，因为解析时会自动添加上.value。
 
 
 
-### 2.2 reactive
+## 总结
+
+这一讲内容不是很多，主要就是来了解一下vue3中的组合式api的使用，以及相关的内容的细节上的理解，setup、ref、reactive真的是很重要的，还是希望大家可以熟练的使用和掌握，加油ヾ(◍°∇°◍)ﾉﾞ！
